[package]
name = "generate-simple-reverse-proxy-conf-to-nginx"
version = "0.1.0"
authors = ["sifyfy <siphilia.rn@gmail.com>"]
license = "MIT OR Apache-2.0"
edition = "2018"

[dependencies]
clap-verbosity-flag = "0.2.0"
config = "0.9.2"
env_logger = "0.6.1"
exitfailure = "0.5.1"
failure = "0.1.5"
glob = "0.3.0"
log = "0.4.6"
serde = "1.0"
serde_derive = "1.0"
structopt = "0.2.15"
url = { version = "1.7.2", features = ["serde"] }
url_serde = "0.2.0"
